beta6:
+ Added an "all" permission if you want to be 200% sure all is allowed.
* Fixed global permissions. The mod should work properly now.
* Removed debug message spam.

beta5:
* Fixed a bug that caused chat crashing on non-test-environment SMP servers.

beta4:
+ EnderNet transmitters and receivers can now send redstone signals!
+ Added Ender Chat Boxes. They will print out all messages they receive, as well as have a say(...) command to be able to say things.
+ Added playerRadius! It's a custom chat-radius system, works essentially like the one in Essentials.
+ Added randomHTTPPort parameter for LAN users. See console output for port for now.
+ Added globalPermissions - global (including intra-server) permissions.

beta3:
+ Add Ender Modems! They are far cheaper CC-message-only transceivers.
+ Add BuildCraft pipe support for Receivers!
+ Add the ability to whitelist dimensions.
+ Add "registerURIHandler" (String: class name) to register an IURIHandler via IMC.
+ Add the "disableCraftingRecipes" config option.
+ Add "canReceive" and "canTransmit" functions, returning booleans, to CC API.
* Refactored IURIHandler to require far less boilerplate code.
* The energy slot now takes Ender Pearls and Eyes of Ender. (Still not implemented)

beta2:
+ Add "getID" to the ComputerCraft APIs, to get the ID of the current device.
+ Add "hasItem" and "canSendItem" to ComputerCraft Ender Transmitter API - that way you can automate item sending better.
+ Improve item duct (Thermal Expansion 3) compatibility - you don't need a chest as a buffer anymore!
* /enreload now properly recovers from failure to reload.
* Fix major implementation bugs in the sending method.
/ BETA2 CANNOT PROPERLY COMMUNICATE WITH ANY VERSION BEFORE BETA2! The reason for that is the major bugs in the item sending method mentioned above - the format of communication had to be changed. (This may happen any number of times until we move to rc1/0.2.0. But I will try to promise that it won't.)

beta1: